[package]
name = "sdr"
version = "0.1.0"
authors = ["Aaron Griffith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustplotlib = "0.0"
bumpalo = "3.0"
num = "0.2"
byteorder = "1.3"
hound = "3.4"
rodio = "0.11"
clap = "2.33"
nalgebra = "0.21"
special-fun = "0.2"
libc = "0.2"
libsamplerate = "0.1"