[package]
name = "sdr"
version = "0.1.0"
authors = ["Aaron Griffith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
byteorder = "1.3"
hound = "3.4"
rodio = "0.11"
clap = "2.33"
nalgebra = "0.21"
special-fun = "0.2"
libc = "0.2"
rustfft = "3.0"
rayon = "1.3"
plotters = "0.2"
palette = "0.5"

[dependencies.libsamplerate-sys]
git = "https://github.com/agrif/libsamplerate-sys"
branch = "cmake"
